# adaptive

./: .gitignore  .mcp.json  .mypy.ini  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PR_PLAN_OMITZERO_FIX.md  README.md  SECURITY.md  check_yaml.py  docker-compose.yml  extract_domains.py  package.json  pricing_analysis.ipynb  pyproject.toml  setup.cfg  test.py
adaptive_ai/: .coverage  .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.gpu  Makefile  README.md  __init__.py  adaptive_bot.py  config.yaml  coverage.xml  deploy.sh  domain_classifier.py  entrypoint.sh  llms.py  main.py  mypy.ini  parameters.py  prompt_classifier.py  pyproject.toml  requirements.txt
adaptive_ai/adaptive_ai/: .coverage  .dockerignore  __init__.py  config.yaml  main.py
adaptive_ai/config/: config.yaml
adaptive_ai/core/: config.py
adaptive_ai/model_data/: cost_tracker.py  update_from_helicone.py
adaptive_ai/model_router/: .gitignore  CLAUDE.md  Dockerfile  Makefile  config.yaml  entrypoint.sh  pyproject.toml
adaptive_ai/models/: __init__.py  config_loader.py  llms.py  orchestrator.py  parameters.py  requests.py  types.py
adaptive_ai/nvidiaModel/: neom_prompt_classifier.py
adaptive_ai/prompt-task-complexity-classifier/: README.md  config.yaml  deploy.py  mypy.ini  pyproject.toml
adaptive_ai/prompt_task_complexity_classifier/: config.yaml  deploy.py  mypy.ini  pyproject.toml
adaptive_ai/scripts/: IMPLEMENTATION_STEPS.md  PIPELINE_README.md  PROVIDER_CLEANUP.md  README.md  automated_model_pipeline.py  create_structured_provider_yamls.py  demo_providers.py  extract_provider_models.py  helicone_api_data.json  model_capability_agent.py  production_providers.py  quantize_model.py  requirements.txt  run_extraction.py  test_extraction.py
adaptive_ai/services/: __init__.py  domain_classifier.py  llm_parameters.py  model_selector.py  prompt_classifier.py  prompt_classifier1.py
adaptive_ai/tests/: README.md  __init__.py  conftest.py  final_prompt_code_generation.py  test.py  test_basic.py  test_caching_systems.py  test_case_sensitivity_fix.py  test_cost_bias.py  test_custom_model_selection.py  test_custom_models.py  test_dummy.py  test_error_handling.py  test_main_api.py  test_main_integration.py  test_new_architecture.py  test_onnx_quantization.py  test_partial_model_handling.py  test_placeholder.py  test_provider_constraints.py  test_routing_consistency.py  test_task_routing.py  test_task_specialization.py  vector_analysis_report_medium.md
adaptive_router/: .coverage.Atts-MacBook-Pro-2.local.47608.XNVkfoEx  .coverage.Botirs-MacBook-Pro-2.local.43747.XCZPHrLx  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  KNOWLEDGE.md  README.md  ROUTING_FLOW_REPORT.md  S3_SETUP.md  __init__.py  app.py  config.py  deploy.py  jwt_auth.py  main.py  model_fuzzy_matching.py  model_registry.py  model_router_factory.py  pyproject.toml  railway.json  tessl.json  test_dataset.csv  test_unirouter_minio.py  train.py
adaptive_router/adaptive_router/: README.md  __init__.py  app.py  cli.py
adaptive_router/app/: __init__.py  config.py  health.py  main.py  models.py
adaptive_router/core/: __init__.py  feature_extractor.py  router.py
adaptive_router/experiments/: 02_codebert_optimization.ipynb  03_hierarchical_coding_router.ipynb  04_comprehensive_clustering_experiments.ipynb  05_codebert_hybrid_optimization.ipynb  05_ibm_informed_clustering.ipynb  06_hierarchical_clustering_optimization.ipynb  07_objective_clustering_evaluation.ipynb  README.md  best_config.json  embedding_comparison_results.csv  objective_clustering_results.csv
adaptive_router/models/: config.py  storage.py
adaptive_router/scripts/: README.md  migrate_pickle_to_json.py  sync_openrouter_models.py
adaptive_router/train/: train.py
adaptive_router/utils/: __init__.py  model_parser.py
analysis/: README.md  __init__.py  pyproject.toml
analysis/tests/: __init__.py
benchmarks/: .gitignore  .mypy.ini  CLAUDE.md  README.md  __init__.py  classifier_comparison.py  final_prompt_code_generation.py  pyproject.toml  requirements.txt  test_adaptive_simple.py  vector_analysis_report_easy.md
benchmarks/.deepeval/: .deepeval_telemetry.txt
benchmarks/LmSys_analysis_results/: Quantize_test.py  analyze_lmsys_chat.py  processing_data.py  summary_statistics.txt
benchmarks/MMLU benchmark/: api_testing.ipynb  mmlu_math_benchmark_20250713_220858.csv  mmlu_math_benchmark_20250726_123336.csv  mmlu_math_benchmark_20250726_175131.csv  protocol_analysis.ipynb  pyproject.toml
benchmarks/arc_easy/: arc_easy_vector_analysis_report.md  test.py
benchmarks/arc_hard/: arc_easy_vector_analysis_report.md  test.py
benchmarks/docs/: EVALUATION_WORKFLOW.md
benchmarks/fullstackbench/: test.py
benchmarks/genai-perf/: .gitignore  README.md  docker-compose.yml  main.py  model_catalog.py  pyproject.toml  run_benchmarks.sh
benchmarks/humaneval/: config.py  run_benchmark.py
benchmarks/model-selection-testing/: README.md  model_selection_testing.ipynb  pyproject.toml
benchmarks/protocol-model-testing/: README.md  protocol_testing.ipynb  pyproject.toml
benchmarks/real_testing/: analyze_results.py  test.py
benchmarks/scripts/: test_adaptive_simple.py
benchmarks/swe-bench/: .gitignore  README.md  download_dataset.py  pyproject.toml  run_benchmark.py
benchmarks/test_complexity/: arc_easy_complexity_analysis_report.md  test.py
benchmarks/web-perf/: .gitignore  (+2 more)
mind-maestro/: analyze_routing_results.py  generate_routing_dataset.py  package-lock.json  pyproject.toml  routerbench_analysis.ipynb  test_ai_routing.py
minion-service/: .gitignore  Dockerfile  README.md  pyproject.toml
modal/: DEPLOYMENT_CHECKLIST.md  README.md  SETUP_GUIDE.md  adaptive_ai_env_template.env  app.py  deploy.py  pyproject.toml  quick_test.py  test_classify.py  test_integration.py
nvidia-prompt-classifier/: README.md  deploy.py  pyproject.toml  test_performance.py
prompt-task-complexity-classifier/: .gitignore  README.md  deploy.py  pyproject.toml
prompt-task-complexity-classifier-quantized/: .gitignore  README.md  augmented_model.onnx  pyproject.toml
(+1615 files in other folders)
