[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adaptive-router"
version = "0.1.0"
description = "Intelligent LLM Infrastructure with Smart Model Selection"
authors = [{ name = "Botir Khaltaev", email = "botirkhaltaev@llmadaptive.uk" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = "MIT"
keywords = ["llm", "ai", "model-selection", "machine-learning", "adaptive"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  # API Framework
  "fastapi>=0.104.0,<1.0",
  "hypercorn>=0.17.0,<1.0",
  # Data Validation
  "pydantic>=2.11.5,<3",
  "pydantic-settings>=2.9.1,<3",
  # HTTP Clients
  "requests>=2.31.0,<3",
  "httpx>=0.25.0,<1.0",
  "aiohttp>=3.8.0,<4.0",
  # ML Framework & Models
  "torch>=2.2.0,<2.9.0",
  "transformers>=4.52.4,<5",
  "huggingface-hub>=0.32.0,<1.0",
  "numpy>=1.24.0,<3.0",
  "accelerate>=1.8.1,<2",
  # Modal Deployment
  "modal>=1.1.4",
  # LLM Integration
  "langchain>=0.3.26,<0.4",
  "langchain-core>=0.3.66,<0.4",
  "openai>=1.97.1",
  # Utilities
  "pyyaml>=6.0.2,<7",
  "cachetools>=5.3.0,<7",
  "python-jose[cryptography]>=3.3.0,<4.0",
  "pyjwt>=2.10.1",
  "python-json-logger>=3.3.0",
]

[project.urls]
Homepage = "https://llmadaptive.uk"
Repository = "https://github.com/Egham-7/adaptive"
Documentation = "https://docs.llmadaptive.uk"
"Bug Tracker" = "https://github.com/Egham-7/adaptive/issues"



[dependency-groups]
dev = [
  "mypy>=1.15.0,<2",
  "black>=25.1.0,<26",
  "ruff>=0.11.11,<0.14",
  "types-requests>=2.32.0.20250611,<3",
  "types-pyyaml>=6.0.12.20250516,<7",
  "types-cachetools>=5.3.0,<7",
  "types-python-jose>=3.5.0.20250531",
  "types-pyjwt>=1.7.1",
]
test = [
  "pytest>=8.4.1,<9",
  "pytest-cov>=6.2.1,<8",
  "pytest-asyncio>=0.24.0,<1",
]
docs = ["mkdocs>=1.5.0,<2", "mkdocs-material>=9.0.0,<10"]


[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''


[tool.mypy]
exclude = [
  "model_data/",
  "tests/integration/",
]

[[tool.mypy.overrides]]
module = [
  "pydantic.*",
  "pydantic_settings.*",
  "langchain.*",
  "langchain_core.*",
  "langchain_openai.*",
  "hypercorn.*",
  "fastapi.*",
  "httpx.*",
  "pythonjsonlogger.*",
  "langgraph.*",
  "transformers.*",
  "torch.*",
  "huggingface_hub.*",
  "accelerate.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
  "integration: marks tests as integration tests (requiring running service)",
  "unit: marks tests as unit tests (no external dependencies)",
  "asyncio: marks tests as async tests",
]
addopts = "-v --strict-markers"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]
