[project]
name = "minion-service"
version = "0.1.0"
description = "LitGPT-based OpenAI-compatible API server with automatic model management"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Adaptive", email = "contact@adaptive.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "hf-transfer>=0.1.9",
    "litgpt>=0.5.9",
    "litserve>=0.2.13",
    "openai>=1.97.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.0",
    "ruff>=0.12.4",
]

[project.scripts]
minion-service = "minion_service.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["minion_service"]


